fix logo disapearing on mobile

--- a/css/guardian.scss
+++ b/css/guardian.scss
@@ -8,7 +8,7 @@ body {
   // padding-top: 70px;
   background-color: rgba(51,51,51,0.05);
   // background-image: none;
-  // font-family: "Guardian Egyptian Web","Guardian Text Egyptian Web",Georgia,serif;
+  font-family: "Guardian Egyptian Web","Guardian Text Egyptian Web",Georgia,serif;
 
 }
 
