--- a/css/main.scss
+++ b/css/main.scss
@@ -12,7 +12,7 @@ html, body {height: 100%;}
   overflow:auto;
   padding-bottom: 75px; /* must be same height as the footer */
   /*Top padding to bring content out from under fixed nav*/
-  padding-top: 75px; //was 50px!
+  padding-top: 50px; //was 50px!
 }
 
 #sticky-body-home {
@@ -113,6 +113,14 @@ body {
   margin-left: auto;
   margin-right: auto;
   max-width: 90%;
+}
+
+#landing-image {
+  // margin-top: 10px;
+}
+
+#logo {
+  padding-top: 50px;
 }
 
 .text {
